--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "node-api3-project",
+  "name": "node-api4-project",
   "version": "1.0.0",
-  "description": "Node API 3 Project",
+  "description": "Node API 4 Project",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/LambdaSchool/node-api3-project#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.20.11",
     "node-pre-gyp": "^0.14.0",
